--- a/Vistas/AnalisisEF.form
+++ b/Vistas/AnalisisEF.form
@@ -90,9 +90,9 @@
                           <Component id="lbIncrementoVentas" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtPorcentaje" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lbPorcentaje" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtPorcentaje" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="ComboBoxAnalisis" min="-2" max="-2" attributes="0"/>
