--- a/Vistas/Propuestas.form
+++ b/Vistas/Propuestas.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Realizar Propuestas"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -168,7 +169,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jbRegistrar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Regsitrar cambios"/>
+        <Property name="text" type="java.lang.String" value="Registrar cambios"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbRegistrarActionPerformed"/>
